--- a/MovimentImatge/MovimentImatge.csproj
+++ b/MovimentImatge/MovimentImatge.csproj
@@ -15,6 +15,15 @@
       <None Update="imatges\cavaller.png">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="imatges\granota.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="imatges\princess.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="imatges\failed.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
